# 2D-Cutting-Stock-Problem-Genetic-Algorithms

./: .gitignore  README.md
project/: CMakeLists.txt  FindGALIB.cmake
project/cutting_stock_problem_solver/common/: Piece.hpp  Pieces.hpp  RandomNumberGenerator.hpp
project/cutting_stock_problem_solver/common/area_calculators/: AreaCalculating.hpp  AreaOutsideSheetCalculator.hpp  FiguresAreaCalculator.hpp  OverlappingAreaCalculator.hpp
project/cutting_stock_problem_solver/common/genetic_algorithm/: AlgorithmSettings.cpp  CompositeGenome.cpp  CompositeGenome.hpp  CuttingStockProblemGeneticSolver.hpp  ObjectiveFunction.hpp
project/cutting_stock_problem_solver/common/io_handlers/: ResultsWriter.hpp
project/cutting_stock_problem_solver/include/: AlgorithmSettings.hpp  CompositeGenome.hpp  CuttingStockProblemGeneticSolver.hpp  Figure.hpp  FigureDimentionsGlobalStorage.hpp  FiguresAreaCalculator.hpp  InputDataReader.hpp  ObjectiveFunction.hpp  Pieces.hpp  RandomNumberGenerator.hpp  ResultValidator.hpp  ResultsWriter.hpp  Sheet.hpp  SolutionCleaner.hpp
project/cutting_stock_problem_solver/main/: CompositeGenomeTesterMain.cpp  Solver.cpp
project/cutting_stock_problem_solver/solver/: Main.cpp
project/cutting_stock_problem_solver/src/: CompositeGenome.cpp  RandomNumberGenerator.cpp  ResultValidator.cpp  Sheet.cpp  SolutionCleaner.cpp
project/input/: maleplyty.txt
project/scripts/: output.txt  results_drawer.py
report/: sprawozdanie.tex
